--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div>
+  <div class="jumbotron">
+    <h1 class="display-3"> Workout tracker </h1>
+    <hr class="my-4" />
+    <p>
+      Welcome to Workout Tracker !
+    </p>
+  </div>
+</div>
+
