--- a/src/app/workouts/workouts.component.html
+++ b/src/app/workouts/workouts.component.html
@@ -1,3 +1,43 @@
-<p>
-  workouts works!
-</p>
+<div>
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px'}"></ngx-loading>
+  <div class="card">
+    <div class="card-header">
+      <h4 class="card-title">Workouts</h4>
+    </div>
+    <div class="card-body">
+      <button class="btn btn-sm btn-primary">Set performance targets</button>
+
+        <!-- TODO -->
+    </div>
+  </div>
+
+  <div class="card">
+    <h3 class="class-header">
+      Workout entries
+      <a [routerLink]="['/workouts', 'new']" class="btn btn-primary btn-sm float-right">Add new entry</a>
+    </h3>
+    <div class="card-body">
+      <table class="table table-striped">
+        <thead>
+          <th>Date</th>
+          <th>Type</th>
+          <th>Distance</th>
+          <th></th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let entry of workouts">
+            <td>{{entry.date}}</td>
+            <td>{{entry.type}}</td>
+            <td>{{entry.distance}}</td>
+            <td>
+              <a [routerLink]="['/workouts', entry.id]" class="btn btn-info btn-sm mr-2">Edit</a>
+              <button class="btn btn-danger btn-sm" >Delete</button> <!-- (click)="deleteWorkout(entry.id, deleteModal)" -->
+            </td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
