retrieving data success

--- a/src/app/entry-editor/entry-editor.component.html
+++ b/src/app/entry-editor/entry-editor.component.html
@@ -8,11 +8,22 @@
         <div class="form-group row">
           <label class="col-form-label col-sm-2">Type:</label>
           <div class="col-sm-6">
-            <div class="btn-group btn-group-toggle" ngbRadioGroup name="wtype" [(ngModel)]="workout.type">
+
+            <select class="form-control" name="wtype" [(ngModel)]="workout.type">
+              <option value=""></option>
+              <option value="bike">Bike</option>
+              <option value="run">Run</option>
+              <option value="row">Row</option>
+            </select>
+
+
+            <!--
+            <div class="btn-group btn-group-toggle" name="wtype" ngbRadioGroup [(ngModel)]="workout.type">
               <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="bike">Bike</label>
               <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="run">Run</label>
               <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="row">Row</label>
             </div>
+             -->
 <!--
             <button class="btn btn-outline-info btn-sm ml-sm-2" [popoverTitle]="popTitle"
                     [ngbPopover]="popContent" placement="right" popoverClass="custom-popover"
