--- a/src/app/entry-editor/entry-editor.component.html
+++ b/src/app/entry-editor/entry-editor.component.html
@@ -8,14 +8,19 @@
         <div class="form-group row">
           <label class="col-form-label col-sm-2">Type:</label>
           <div class="col-sm-6">
-
+<!--
             <select class="form-control" name="wtype" [(ngModel)]="workout.type">
               <option value=""></option>
               <option value="bike">Bike</option>
               <option value="run">Run</option>
               <option value="row">Row</option>
             </select>
-
+-->
+            <div class="btn-group btn-group-toggle" ngbRadioGroup name="wtype" [(ngModel)]="workout.type">
+              <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="run">Bike</label>
+              <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="bike">Run</label>
+              <label ngbButtonLabel class="btn-primary"><input ngbButton type="radio" value="row">Raw</label>
+            </div>
 
             <!--
             <div class="btn-group btn-group-toggle" name="wtype" ngbRadioGroup [(ngModel)]="workout.type">
